fixed spacing on list elements

--- a/public/assets/styles/book.css
+++ b/public/assets/styles/book.css
@@ -42,6 +42,12 @@ ul {
     text-align: left;
     line-height: 2rem;
 }
+
+li {
+    padding: .5rem;
+    line-height: 1.3rem;
+}
+
 .stuff {
     display: flex;
     flex-direction: column;
@@ -49,7 +55,7 @@ ul {
     align-items: center;
 }
 
-button {
+.button {
     display: inline-block;
     background-color:#8fbc89;
     border: none;
@@ -89,6 +95,12 @@ footer {
     color: white;
     text-align: center;
     font-size: .8rem;
+    justify-content: center;
+    padding-top: 2%;
+}
+
+#footerText::before {
+    content: " ,  ";
 }
 
 /* 
@@ -125,7 +137,7 @@ footer {
     }
 
     .list {
-        padding: 0;
+        padding-left: 5%;
     }
 
     .list-container{
@@ -139,7 +151,7 @@ footer {
         align-items: center;
     }
 
-    button {
+    .button, input[type=button] {
         padding: 2rem 4.5rem;
         margin: 2rem;
         font-size: 2rem;
